# stent

./: .gitignore  PLAN-2-0.md  PLAN-3.md  PLAN.md  README.md  REVIEW.md  TODOS.md  UPDATES.md  cleanup.py  pyproject.toml  pyrefly.toml
dfns/: executor.py  registry.py
docs/: PLAN-v1-initial-hardening.md  REVIEW-v1-initial-hardening.md  comparison.md  configuration.md  core-concepts.md  deployment.md  feature-updates.md  getting-started.md  index.md
examples/: batch_processing.py  complex_workflow.py  failing_flow.py  media_pipeline.py  parallel_scraper.py  research_agent.py  saga_trip_booking.py  simple_flow.py
features/: 001-task-leases.md  002-database-cleanup.md  003-scheduling-and-sleep.md  004-uv-migration.md  005-fix-type-errors-and-segfault.md  006-max-workflow-duration.md  007-postgres-backend.md  008-fan-out-fan-in.md  009-rate-limiting.md  010-external-signals.md  012-execution-heartbeats-and-polling.md  013-dx-registry-and-expiry.md  014-operability-and-observability.md  015-post-hardening-review.md  016-v2-hardening.md  017-enhanced-cli.md  018-exception-serialization.md  019-p0-correctness-fixes.md  020-worker-tag-filtering.md  021-cli-backend-lifecycle.md  022-count-based-cli-stats.md  023-duration-parser-validation-hardening.md  024-utc-utility-consistency.md  025-typecheck-hygiene-and-dev-deps.md  026-executor-wait-poll-helper-extraction.md  027-executor-signal-handling-extraction.md  028-executor-worker-task-handling-extraction.md  029-executor-dispatch-and-map-helper-extraction.md  030-backend-row-mapping-and-policy-serialization-dedup.md  (+4 more)
(+73 files in other folders)
