[project]
name = "stent"
version = "1.1.1"
description = "Distributed Durable Functions in Python"
authors = [
  { name="noku", email="noku@onlypa.ws" },
]

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "redis>=7.1.0",
]

[project.scripts]
stent = "stent.cli:main"

[project.urls]
Homepage = "https://github.com/nokusukun/stent"
Issues = "https://github.com/nokusukun/stent/issues"

[dependency-groups]
dev = [
    "pyrefly>=0.43.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ty",
]

[tool.setuptools.packages.find]
exclude = ["features"]

[tool.setuptools.package-data]
stent = ["py.typed"]
